--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,23 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.MyNavbar {
+  background-color: #101010;
+  width: 100%;
+  float: left;
+  line-height: 50px;
+  margin: 0;
+}
+
+.MyNavbarLink {
+  color: #ffffff;
+  font-family: "century gothic";
+  font-weight: bold;
+  margin: 10px;
+  text-decoration: none;
+}
+
+.MyNavbarLink:hover {
+  color: #8a8a8a;
 }
