--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,23 +1,54 @@
-body {
+* {
   margin: 0;
+  font-family: "century gothic";
 }
 
-.MyNavbar {
+.Navbar {
   background-color: #101010;
   width: 100%;
   float: left;
   line-height: 50px;
-  margin: 0;
+  margin-bottom: 20px;
 }
 
-.MyNavbarLink {
+.NavbarElement {
   color: #ffffff;
-  font-family: "century gothic";
   font-weight: bold;
   margin: 10px;
   text-decoration: none;
 }
 
-.MyNavbarLink:hover {
+.NavbarLink:hover {
   color: #8a8a8a;
+}
+
+.content {
+  margin: auto 10%;
+  height: 100vh;
+}
+
+.TestItem {
+  border: 1px solid #000000;
+  border-radius: 5px;
+  max-width: 300px;
+}
+
+.TestsList {
+  display: flex;
+}
+
+.input-name {
+  margin: 0;
+  font-size: 10pt;
+}
+
+.input-group {
+  margin: 10px auto;
+}
+
+.error {
+  border-radius: 5px;
+  max-width: 50%;
+  background-color: #ffc0c0;
+  border: 1px solid #800000;
 }
